# HennyWes

./: .env.local.example  .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  tailwind.config.ts
server/: package.json
server/src/: index.ts
server/src/routes/: free-trial.ts
server/src/services/: db.ts
src/app/: globals.css  layout.tsx
src/app/api/campaigns/: route.ts
src/app/api/contacts/: route.ts
src/app/api/import/: route.ts
src/app/calling/: page.tsx
src/app/campaigns/: page.tsx
src/app/dashboard/: page.tsx
src/app/import/: page.tsx
src/app/properties/: page.tsx
src/app/search/: page.tsx
src/app/settings/: page.tsx
src/components/layout/: Sidebar.tsx
src/lib/ai/: client.ts  generators.ts
src/lib/csv/: columnMaps.ts  parser.ts
src/lib/db/: index.ts  migrate.ts
src/lib/propstream/: client.ts  comps.ts  search.ts
src/lib/skip-trace/: index.ts  urls.ts
src/lib/utils/: format.ts
src/types/: campaign.ts  comps.ts  contact.ts  outreach.ts  property.ts  settings.ts
vulnforge/: README.md  setup.sh
vulnforge/backend/: package-lock.json  package.json
vulnforge/cli/: index.js  package-lock.json  package.json
vulnforge/config/: README.md
vulnforge/reports/: example-bug-bounty_reflected-cross-site-scripting-(xss)_e00e21c5.md
vulnforge/reports/templates/: base.md  sqli.md  xss.md
vulnforge/scanner/: README.md  pyproject.toml  recon_engine.py  report_generator.py  requirements.txt  scope_parser.py  test_recon_engine.py  test_scope_parser.py  test_vuln_detector.py  vuln_detector.py
(+18 files in other folders)
