[tool.poetry]
name = "vulnforge-scanner"
version = "0.1.0"
description = "Core scanning engine for VulnForge"
authors = ["VulnForge Team"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
